--- a/outsourcing/index.html
+++ b/outsourcing/index.html
@@ -129,16 +129,16 @@
                 <li class="menu-item"><a href="#offers" class="go_to">Наши услуги</a></li>
                 <li class="menu-item"><a href="#about" class="go_to">О нас</a></li>
                 <li class="menu-item"><a href="#stages" class="go_to">Этапы работы</a></li>
-                <li class="menu-item"><a href="#advantages" class="go_to">Преимущества</a></li>
+                <li class="menu-item"><a href="#price" class="go_to">Тарифы</a></li>
                 <li class="menu-item"><a href="#contacts" class="go_to">Контакты</a></li>
             </ul>
         </div>
 
         <a href="tel:+74954779700" class="phone-mobile">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                 x="0px" y="0px"
-                 viewBox="0 0 25.625 25.625" style="enable-background:new 0 0 25.625 25.625;"
-                 xml:space="preserve">
+                             x="0px" y="0px"
+                             viewBox="0 0 25.625 25.625" style="enable-background:new 0 0 25.625 25.625;"
+                             xml:space="preserve">
 <g>
 	<path d="M22.079,17.835c-1.548-1.324-3.119-2.126-4.648-0.804l-0.913,0.799
 		c-0.668,0.58-1.91,3.29-6.712-2.234C5.005,10.079,7.862,9.22,8.531,8.645l0.918-0.8c1.521-1.325,0.947-2.993-0.15-4.71l-0.662-1.04
@@ -154,59 +154,46 @@
 </header>
 
 <main>
-    <div class="main-slider">
-        <div class="slide">
-            <div class="slide-bg"><img src="img/bg1.jpg" alt=""></div>
-            <div class="container">
-                <div class="main-slider__box">
-                    <div class="main-slider__content">
-                        <div class="main-slider__title">Персонал в аренду
-                            от 250 руб/час
-                        </div>
-                        <p>Получите расчеты не позже 3 часов после обращения по телефону</p>
-
-
+    <div class="container">
+        <div class="main-slider">
+            <div class="slide">
+                <div class="main-slider__content">
+                    <div class="main-slider__title">Персонал в аренду
+                        от 250 руб/час
                     </div>
-                    <div class="main-image"><img src="img/men.png" alt=""></div>
+                    <p>Получите расчеты не позже 3 часов после обращения по телефону</p>
+
 
                 </div>
             </div>
 
-        </div>
+            <div class="slide">
+                <div class="main-slider__content">
+                    <div class="main-slider__title">Услуги аутсорсинга в Москве!</div>
+                    <p>Сэкономьте до 30% бюджета на рабочих и избавьтесь от проблем с поиском, наймом и контролем
+                        персонала!</p>
 
-        <div class="slide">
-            <div class="slide-bg"><img src="img/bg1.jpg" alt=""></div>
-            <div class="container">
-                <div class="main-slider__box">
-                    <div class="main-slider__content">
-                        <div class="main-slider__title">Услуги аутсорсинга в Москве!</div>
-                        <p>Сэкономьте до 30% бюджета на рабочих и избавьтесь от проблем с поиском, наймом и контролем
-                            персонала!</p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="slide">
-            <div class="slide-bg"><img src="img/bg1.jpg" alt=""></div>
-            <div class="container">
-                <div class="main-slider__box">
-                    <div class="main-slider__content">
-                        <div class="main-slider__title">Аренда рабочих в Москве и области!</div>
-                        <p>С нами поиск рабочих выполняется в кратчайшие сроки! Более 30-ти различных специальностей в
-                            нашем
-                            штате.</p>
-                    </div>
                 </div>
             </div>
 
+            <div class="slide">
+                <div class="main-slider__content">
+                    <div class="main-slider__title">Аренда рабочих в Москве и области!</div>
+                    <p>С нами поиск рабочих выполняется в кратчайшие сроки! Более 30-ти различных специальностей в
+                        нашем
+                        штате.</p>
+                </div>
+
+            </div>
+
+
         </div>
+
+
+        <div class="main-image"><img src="img/men.png" alt=""></div>
 
 
     </div>
-
-
 </main>
 
 <section class="offers" id="offers">
@@ -438,7 +425,7 @@
     </div>
 </section>
 
-<section class="advantages" id="advantages">
+<section class="advantages">
     <div class="container">
         <h2>Полчему более 1000 компаний выбрали
             нас для сотрудничества ?</h2>
@@ -635,8 +622,6 @@
                 <span>GRUPP</span>
             </a>
 
-
-
             <div class="header-wrapper">
                 <div class="header-top">
 
@@ -702,7 +687,7 @@
                     <li class="menu-item"><a href="#offers" class="go_to">Наши услуги</a></li>
                     <li class="menu-item"><a href="#about" class="go_to">О нас</a></li>
                     <li class="menu-item"><a href="#stages" class="go_to">Этапы работы</a></li>
-                    <li class="menu-item"><a href="#advantages" class="go_to">Преимущества</a></li>
+                    <li class="menu-item"><a href="#price" class="go_to">Тарифы</a></li>
                     <li class="menu-item"><a href="#contacts" class="go_to">Контакты</a></li>
                 </ul>
             </div>
@@ -711,7 +696,6 @@
 
     <div class="footer-bottom">
         <div class="container">
-            <a href="politics.docx" class="links">Политика конфиденциальности</a>
             <div class="copyright">2020. Все права защищены</div>
         </div>
     </div>
@@ -748,7 +732,7 @@
                                                    placeholder="Введите Ваше сообщение"></textarea></label>
 
             <div class="consent">
-                Нажимая кнопку "Заказать звонок", я даю свое <a href="consent.docx" class="links" target="_blank">согласие
+                Нажимая кнопку "Заказать звонок", я даю свое <a href="consent.html" class="links" target="_blank">согласие
                 на обработку моих персональных данных</a>
             </div>
 
